# MailBox_FYCC

./: .gitignore
MailBox/: MailBox.sln
MailBox/MailBox/: AccountInfos.xml  App.xaml  App.xaml.cs  MailBox.csproj  MainWindow.xaml  MainWindow.xaml.cs  packages.config
MailBox/MailBox/Commands/: DelegateCommand.cs
MailBox/MailBox/Models/: AccountInfo.cs  MailFile.cs  MailItem.cs
MailBox/MailBox/Properties/: AssemblyInfo.cs  Resources.Designer.cs
MailBox/MailBox/Resources/: AccountInfos.xml
MailBox/MailBox/Services/: Converters.cs  MailUtil.cs  ValidateAccount.cs  XMLOperation.cs
MailBox/MailBox/ViewModels/: HomeViewModel.cs  MainWindowViewModel.cs  NotificationObject.cs  ReceiveMailViewModel.cs  welcomeViewModel.cs  writeMailViewModel.cs
MailBox/MailBox/Views/: ConfirmDeleteController.xaml  ConfirmDeleteController.xaml.cs  FreshController.xaml  FreshController.xaml.cs  FreshProgessController.xaml  FreshProgessController.xaml.cs  HomePage.xaml  HomePage.xaml.cs  HtmlWebBrowser.xaml  HtmlWebBrowser.xaml.cs  LoginController.xaml.cs  MessageController.xaml  MessageController.xaml.cs  ReceiveMailController.xaml  ReceiveMailController.xaml.cs  ShowInvalidController.xaml  WriteMailController.xaml  (+5 more)
Rust_DLL_Test_Stage/: Rust_DLL_Test_Stage.sln
Rust_DLL_Test_Stage/Rust_DLL_Test_Stage/: MailDependence.cs  MailItem.cs  Rust_DLL_Test_Stage.csproj  Test.cs  TestPlace.cs  packages.config
pop3lib/: Cargo.toml
pop3lib/src/: lib.rs
pythonWarpped/: MimeWarpped.py
pythonWrapped/: MimeWrapped.py
smtp_rust/: Cargo.toml
stmplib/: Cargo.toml
stmplib/src/: lib.rs
(+17 files in other folders)
