[package]
name = "pop3lib"
version = "0.1.0"
authors = ["jansona <alelipona121@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"
chrono = "0.4"
regex = "1"
libc = "0.2"

[lib]
name = "pop3lib"
crate-type = ["dylib"]